[Update] [Create] change Entity User and create new Post, Meta Entity